<resources>
    <string name="app_name">MLS Research Project</string>

    <string name="txt_login_page">Login</string>
    <string name="txt_username">Username:</string>
    <string name="txt_password">Password:</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="username_example">email@domain.com</string>
    <string name="password_example">********</string>

    <string name="txt_registration_page">Registration</string>
    <string name="txt_first_name_register">First name:</string>
    <string name="txt_last_name_register">Last name:</string>
    <string name="txt_email_register">Email:</string>
    <string name="txt_password_register">Password:</string>
    <string name="txt_password_confirm_register">Confirm password:</string>
    <string name="btn_confirm_register">Confirm</string>
    <string name="btn_cancel_register">Cancel</string>
    <string name="password_requirements">At least 8 characters with a combination of upper letters, numbers and symbols</string>
    <string name="first_name_example">First name</string>
    <string name="last_name_example">Last name</string>
    <string name="email_example">Email</string>
    <string name="register_password_example">Password</string>
    <string name="confirm_password_example">Confirm password</string>
    <string name="first_name_empty">First name cannot be empty</string>
    <string name="last_name_empty">Last name cannot be empty</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_incorrect">Email is invalid</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_confirm_empty">Password confirmation cannot be empty</string>
    <string name="password_not_equal">Passwords must be equal</string>

    <string name="txt_schedule_page">Schedule - Regular Season</string>
    <string name="txt_year">Year: </string>
    <string name="txt_month">Month: </string>
    <string name="txt_schedule_date">Date</string>
    <string name="txt_f_team_name">Team one</string>
    <string name="txt_s_team_name">Team two</string>
    <string name="txt_schedule_time">Time</string>
    <string name="txt_versus">vs</string>
    <string name="txt_score_real">Score: </string>
    <string name="txt_score_predicted">Prediction: </string>

    <string name="txt_user_page">Users</string>
    <string name="txt_user_first_name">First name: </string>
    <string name="txt_user_status">Status: </string>
    <string name="txt_user_search">Search:</string>
    <string name="user_status_active">Active</string>
    <string name="user_status_inactive">Inactive</string>
    <string name="txt_user_full_name">Full name</string>
    <string name="txt_user_email">Email</string>
    <string name="txt_user_admin">Admin: </string>
    <string name="padlock">Change user status</string>
    <string name="user_hint">User search</string>

    <string name="menu_user">User</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_schedule">Schedule</string>

    <string name="txt_team">Teams</string>
    <string name="txt_points">P</string>
    <string name="txt_wins">W</string>
    <string name="txt_losses">L</string>
    <string name="txt_draws">D</string>
    <string name="txt_points_hint">Total points</string>
    <string name="txt_wins_hint">Total wins</string>
    <string name="txt_losses_hint">Total losses</string>
    <string name="txt_draws_hint">Total draws</string>
    <string name="txt_standing_years">Standing year</string>
</resources>