<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="5dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/black">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/txt_schedule_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_schedule_date"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_schedule_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_schedule_time"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/img_f_team"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/txt_f_team_name" />
            <TextView
                android:id="@+id/txt_f_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_f_team_name"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/txt_versus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_versus"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/img_s_team"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/txt_s_team_name" />
            <TextView
                android:id="@+id/txt_s_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_s_team_name"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/txt_score_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_score_real"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/txt_score_predicted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_score_predicted"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>