<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="5dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_user_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_user_full_name"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_user_email"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/txt_user_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_user_admin"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_user_status"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/user_padlock"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/padlock_closed"
        android:layout_gravity="bottom|end"/>
</androidx.cardview.widget.CardView>