<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/txt_user_page"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:minHeight="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_user_status"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"/>
            <Spinner
                android:id="@+id/spn_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:spinnerMode="dialog"
                tools:ignore="SpeakableTextPresentCheck"
                android:textAlignment="center"
                android:entries="@array/user_status_items"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_user_search"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"/>
            <EditText
                android:id="@+id/edtUserSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:ems="20"
                android:hint=""
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:drawableEnd="@drawable/clear"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUserItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>